--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Movies</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -26,34 +26,65 @@
             <a href="#" class="nav-item">Contact Us</a>
         </nav>
     </header>
+
+
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+
         </ol>
+
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="images/avatar.png" class="d-block w-100" alt="...">
+                <img src="images/avatar.png" class="d-block w-100" alt="avatar">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>First slide label</h1>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <div class="head">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">Button</button>
+                            </div>
+                            <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                          </div>
+                        <p>AVATAR 2</p>
+                    </div>
+                    <div class="sembol-captions">
+                        <h6>3hour 10minute | 2020 </h6><br>
+                    </div>
+                    <div class="paragraph">
+                        <p>The Way of Water is a 2022 American epic science fiction film co-produced
+                            and directed by James
+                            Cameron, who co-wrote the screenplay with Rick Jaffa.The Way of Water is a 2022 American
+                            epic science fiction film co-produced
+                            and directed by James
+                            Cameron, who co-wrote the screenplay with Rick Jaffa</p>
+                    </div>
+                    <button type="button" class="btn btn-danger"> ▷ Watch Now</button>
                 </div>
             </div>
+
             <div class="carousel-item">
-                <img src="images/rsm.png" class="d-block w-100" alt="...">
+                <img src="images/rsm.png" class="d-block w-100" alt="avatar2">
                 <div class="carousel-caption d-none d-md-block">
-                    <h1>Second slide label</h1>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <div class="head">
+                        <p>AVATAR 2</p>
+                    </div>
+                    <div class="sembol-captions">
+                        <h6>3hour 10minute | 2020 </h6><br>
+                    </div>
+                    <div class="paragraph">
+                        <p>The Way of Water is a 2022 American epic science fiction film co-produced
+                            and directed by James
+                            Cameron, who co-wrote the screenplay with Rick Jaffa.The Way of Water is a 2022 American
+                            epic science fiction film co-produced
+                            and directed by James
+                            Cameron, who co-wrote the screenplay with Rick Jaffa</p>
+                    </div>
+                    <button type="button" class="btn btn-danger"> ▷ Watch Now</button>
                 </div>
             </div>
-            <div class="carousel-item">
-                <img src="images/avatar.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
-            </div>
+
+
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -63,9 +94,219 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </button>
+    </div><br><br>
+
+    <div class="hhead">
+        <div class="col">
+            <h2>Latest Distributions ____________</h2>
+        </div>
+    </div><br><br>
+    <div class="container">
+        <div class="row">
+            <div class="card-deck">
+                <div class="card">
+                    <img src="images/avengers.png" class="card-img" alt="Avengers">
+                    <h5 class="card-title">Avengers</h5>
+                </div>
+                <div class="card">
+                    <img src="images/inception.png" class="card-img" alt="Inception">
+                    <h5 class="card-title">Inception</h5>
+                </div>
+                <div class="card">
+                    <img src="images/thedark.png" class="card-img" alt="The Dark Knight">
+                    <h5 class="card-title">The Dark Knight</h5>
+                </div>
+                <div class="card">
+                    <img src="images/lordoftherings.png" class="card-img" alt="Lord of the Rings">
+                    <h5 class="card-title">Lord of the Rings</h5>
+                </div>
+            </div>
+        </div>
+    </div><br><br>
+    <div class="container">
+        <div class="row">
+            <div class="card-deck">
+                <div class="card">
+                    <img src="images/thewolf.png" class="card-img" alt="The Wolf of Wall Street">
+                    <h5 class="card-title">The Wolf of Wall Street</h5>
+                </div>
+                <div class="card">
+                    <img src="images/topgun.png" class="card-img" alt="Top Gun Maverick">
+                    <h5 class="card-title">Top Gun Maverick</h5>
+                </div>
+                <div class="card">
+                    <img src="images/interstellar.png" class="card-img" alt="Interstellar">
+                    <h5 class="card-title">Interstellar</h5>
+                </div>
+                <div class="card">
+                    <img src="images/pirates.png" class="card-img" alt=".">
+                    <h5 class="card-title">Pirates of Caribbean </h5>
+                </div>
+            </div>
+        </div>
+    </div><br><br><br>
+    <div class="hhead">
+        <div class="col">
+            <h2>Upcoming Movies ____________</h2>
+        </div>
+    </div><br><br>
+    <div class="container">
+        <div class="row">
+            <div class="cards-design">
+                <div class="cards">
+                    <img src="images/kungfu.png" class="card-img-right" alt=".">
+                    <img src="images/civil.png" class="card-img-top" alt=".">
+                    <img src="images/lord.png" class="card-img-mid" alt=".">
+                    <img src="images/kingdom.png" class="card-img-bottom" alt=".">
+                </div>
+            </div>
+        </div>
+    </div><br><br>
+    <div class="container">
+        <div class="photo">
+            <img src="images/popcorn.png" alt=".">
+        </div>
     </div>
 
-
+    <div class="container">
+        <div class="row">
+            <div class="footer">
+                <div class="footer-wrapper">
+                    <div class="footer-columns">
+                        <div class="footer-logo-column">
+                            <div class="social-wrapper">
+                                <div class='social-links'>
+                                    <ul>
+                                        <li>
+                                            <a href="#" title="Twitter">
+                                                <svg xmlns="http://www.w3.org/2000/svg"
+                                                    class="icon icon-tabler icon-tabler-brand-x" width="24" height="24"
+                                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                    <path d="M4 4l11.733 16h4.267l-11.733 -16z" />
+                                                    <path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772" />
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="GitHub">
+                                                <svg xmlns="http://www.w3.org/2000/svg"
+                                                    class="icon icon-tabler icon-tabler-brand-github" width="24"
+                                                    height="24" viewBox="0 0 24 24" stroke-width="1.5"
+                                                    stroke="currentColor" fill="none" stroke-linecap="round"
+                                                    stroke-linejoin="round">
+                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                    <path
+                                                        d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="Discord">
+                                                <svg xmlns="http://www.w3.org/2000/svg"
+                                                    class="icon icon-tabler icon-tabler-brand-discord" width="24"
+                                                    height="24" viewBox="0 0 24 24" stroke-width="1.5"
+                                                    stroke="currentColor" fill="none" stroke-linecap="round"
+                                                    stroke-linejoin="round">
+                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                    <path d="M8 12a1 1 0 1 0 2 0a1 1 0 0 0 -2 0" />
+                                                    <path d="M14 12a1 1 0 1 0 2 0a1 1 0 0 0 -2 0" />
+                                                    <path
+                                                        d="M15.5 17c0 1 1.5 3 2 3c1.5 0 2.833 -1.667 3.5 -3c.667 -1.667 .5 -5.833 -1.5 -11.5c-1.457 -1.015 -3 -1.34 -4.5 -1.5l-.972 1.923a11.913 11.913 0 0 0 -4.053 0l-.975 -1.923c-1.5 .16 -3.043 .485 -4.5 1.5c-2 5.667 -2.167 9.833 -1.5 11.5c.667 1.333 2 3 3.5 3c.5 0 2 -2 2 -3" />
+                                                    <path d="M7 16.5c3.5 1 6.5 1 10 0" />
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="Youtube">
+                                                <svg xmlns="http://www.w3.org/2000/svg"
+                                                    class="icon icon-tabler icon-tabler-brand-youtube" width="24"
+                                                    height="24" viewBox="0 0 24 24" stroke-width="1.5"
+                                                    stroke="currentColor" fill="none" stroke-linecap="round"
+                                                    stroke-linejoin="round">
+                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                    <path
+                                                        d="M2 8a4 4 0 0 1 4 -4h12a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-12a4 4 0 0 1 -4 -4v-8z" />
+                                                    <path d="M10 9l5 3l-5 3z" />
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="link-columns">
+                            <div>
+                                <section>
+                                    <h3>About Us</h3>
+                                    <ul>
+                                        <li>
+                                            <a href="#" title=".">Atiframe is one of the best website builders that let
+                                                you made a stunning website without coding knowledge.
+                                                20 design versions available to install in 1 click!</a>
+                                        </li>
+                                    </ul>
+                                </section>
+                                <section>
+                                    <h3>Company</h3>
+                                    <ul>
+                                        <li>
+                                            <a href="#" title="what we do">What We Do</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="our core values">Our Core Values</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="services">Services</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="testimonials">Testimonials</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="recent news">Recent News</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="contact us">Contact Us</a>
+                                        </li>
+                                    </ul>
+                                </section>
+                                <section>
+                                    <h3>Useful</h3>
+                                    <ul>
+                                        <li>
+                                            <a href="#" title="Support">Support</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="faq">FAQ</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="live chat">Live Chat</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="privace policy">Privacy Policy</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="terms of use">Terms of Use</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" title="sitmap">Sitemap</a>
+                                        </li>
+                                    </ul>
+                                </section>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- bottom part section -->
+                <div class="footer-bottom">
+                    <div class="footer-bottom-wrapper">
+                        <small>© <span id="year"></span> Movies Inc.</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 </body>
