slide input css fix

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <div class="head">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">Button</button>
+                              <button class="btn btn-outline-secondary" type="button" id="button-addon1">New</button>
                             </div>
-                            <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                            <input type="text" class="form-control search-bar" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                           </div>
                         <p>AVATAR 2</p>
                     </div>
@@ -147,7 +147,7 @@
     </div><br><br><br>
     <div class="hhead">
         <div class="col">
-            <h2>Upcoming Movies ____________</h2>
+            <h2>Upcoming Movies ___________</h2>
         </div>
     </div><br><br>
     <div class="container">
